--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 .flexible-area {
     display: flex;
-    padding-left: 3%;
+    margin-bottom: 10%;
 }
 
 .half-width {
     width: 50%;
+    padding-left: 10%;
 }
 
 .half-width img {
@@ -40,4 +41,36 @@ span {
 
 h3 {
     font-size: 30px;
+}
+
+.top-banner {
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+
+body {
+    margin: 0px;
+}
+
+.Dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.experience-item {
+    box-shadow: 10px 10px 40px green;
+    padding-left: 20px;
+    margin-left: 2%;
+    margin-right: 2%;
+    width: 46%
+}
+
+footer {
+    text-align: center;
+    font-size: 30px;
+}
+
+.orange-color {
+    color: orange;
 }
